[gd_scene load_steps=3 format=3 uid="uid://c8pyg6you27s8"]

[ext_resource type="Script" path="res://MainMenu.gd" id="1_2peyh"]
[ext_resource type="Texture2D" uid="uid://cjqak4scr7fao" path="res://assets/blackboard.jpg" id="2_6hmpf"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_2peyh")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_6hmpf")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer"]
offset_right = 551.0
offset_bottom = 86.0
theme_override_font_sizes/font_size = 60
text = "Morning Coffee Hit"

[node name="Start" type="Button" parent="VBoxContainer"]
offset_top = 90.0
offset_right = 551.0
offset_bottom = 181.0
theme_override_font_sizes/font_size = 60
text = "Start"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
offset_top = 185.0
offset_right = 551.0
offset_bottom = 238.0
size_flags_vertical = 3
alignment = 1

[node name="Easy" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_right = 181.0
offset_bottom = 53.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Easy
"

[node name="Normal" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 185.0
offset_right = 366.0
offset_bottom = 53.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Normal"

[node name="Barista" type="Button" parent="VBoxContainer/HBoxContainer"]
offset_left = 370.0
offset_right = 551.0
offset_bottom = 53.0
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 32
text = "Barista"

[node name="Settings" type="Button" parent="VBoxContainer"]
offset_top = 242.0
offset_right = 551.0
offset_bottom = 295.0
theme_override_font_sizes/font_size = 32
text = "Settings
"

[node name="Quit" type="Button" parent="VBoxContainer"]
offset_top = 299.0
offset_right = 551.0
offset_bottom = 352.0
theme_override_font_sizes/font_size = 32
text = "Quit"

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Normal" to="." method="_on_normal_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Barista" to="." method="_on_barista_pressed"]
[connection signal="pressed" from="VBoxContainer/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_quit_pressed"]
